# ExpenSieve

./: README.md
ExpenSieve.WebApi/: ExpenSieve.cabal  docker-compose.yml
ExpenSieve.WebApi/src/ExpenSieve/: Api.hs
ExpenSieve.WebApi/src/ExpenSieve/Api/: Auth.hs
ExpenSieve.WebApi/src/ExpenSieve/Data/: Transaction.hs  TransactionGroup.hs
ExpenSieve.WebApi/src/ExpenSieve/Symmantics/: Transactions.hs
WebApi/db/: schema.sql
WebApi/src/: Main.hs
WebApi/src/ExpenSieve/: Error.hs
WebApi/src/ExpenSieve/Api/: Users.hs
WebApi/src/ExpenSieve/Data/: FixedTransaction.hs  Transaction.hs  TransactionGroup.hs  User.hs
WebApi/src/ExpenSieve/Impls/: Program.hs
WebApi/src/ExpenSieve/Symmantics/: Transactions.hs  Users.hs
